# neuralops_cuda

./: Cargo.toml  Makefile  build.rs
kernels/: Cargo.toml  activate.cu  build.rs  cast.cu  clamp.cu  conv.cu  conv_batchnorm.cu  gaussian.cu  image.cu  interpolate.cu  lib.rs  linear.cu  logistic.cu  lstsq.cu  map.cu  pool.cu  reduce.cu  softmax.cu
src/: activate.rs  affine.rs  archs.rs  class_loss.rs  common.rs  conv.rs  deconv.rs  input.rs  join.rs  kernels.rs  lib.rs  pool.rs  prelude.rs  regress_loss.rs  softmax.rs  split.rs  util.rs
src/data/: mod.rs
src/opt/: allreduce_sgd.rs  mod.rs  sgd.rs
tools/: shared-train-imagenet-sgd.rs  train-cifar10-adagrad.rs  train-cifar10-adam.rs  train-cifar10-new.rs  train-cifar10-sgd.rs  train-imagenet-sgd.rs  train-mnist-cpu.rs  train-mnist-new.rs
