[package]
name = "neuralops_cuda"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "neuralops_cuda"
path = "src/lib.rs"

[[bin]]
name = "train-mnist-cpu"
path = "tools/train-mnist-cpu.rs"

[[bin]]
name = "train-mnist-new"
path = "tools/train-mnist-new.rs"

[[bin]]
name = "train-cifar10-sgd"
path = "tools/train-cifar10-sgd.rs"

[[bin]]
name = "train-cifar10-adam"
path = "tools/train-cifar10-adam.rs"

[[bin]]
name = "train-imagenet-sgd"
path = "tools/train-imagenet-sgd.rs"

[[bin]]
name = "shared-train-imagenet-sgd"
path = "tools/shared-train-imagenet-sgd.rs"

#[[bin]]
#name = "train"
#path = "tools/train.rs"

[dependencies]
neuralops_cuda_kernels = { path = "kernels" }
byteorder = "*"
float = "*"
libc = "*"
rand = "*"
cuda = { path = "../libcuda" }
cuda_dnn = { path = "../libcuda_dnn" }
densearray = { path = "../libdensearray" }
devicemem_cuda = { path = "../libdevicemem_cuda" }
iter_utils = { path = "../libiter_utils" }
neuralops = { path = "../neuralops" }
operator = { path = "../liboperator" }
rng = { path = "../librng" }
sharedmem = { path = "../libsharedmem" }
